--- a/app/views/dealzons/index.html.erb
+++ b/app/views/dealzons/index.html.erb
@@ -6,34 +6,44 @@
  <h1>All about the Amazon Shopping</h1>
 </div>
 
-<!-- <div class="wrapper">
- <section class="main">
-
-  <div class="dis_slider-wrapper">
-   <div class="dis_slider">
-
-     <div class="dis_slider--content">
-      <a target="_blank" href="https://amzn.to/2PImsfI"><img src="https://i-h2.pinimg.com/564x/99/e8/77/99e877922c69b7899a8c92942b6646d4.jpg" title="Amazon Sales & Coupons Up to 70% off" alt="Amazon Sales & Coupons Up to 70% off">
-       <p>Amazon Sales & Coupons Up to 70% off</p>
-      </a>
-     </div>
-
-     <% @dealzons.each do |sale_offer| %>
-       <div class="dis_slider--content">
-        <a target="_blank" href="<%= sale_offer.am_link %>"><img src="<%= sale_offer.am_image %>" title="<%= sale_offer.am_title %>" alt="<%= sale_offer.am_title %>">
-         <p><%= sale_offer.am_title %></p>
-        </a>
-       </div>
-     <% end %>
-
-   </div>
-  </div>
- 
- </section>
+<!-- <div class="slider-container">
+  <ul class="slider">
+    <li class="slide active">
+      <div class="slide-photo-box"><img class="slide-photo" src="https://goo.gl/5iaCS2"/></div>
+      <div class="slide-text"><i class="quote-character fa fa-quote-left" aria-hidden="true"></i>
+        <p class="article">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sed dolor at
+          magna tempus facilisis. Vivamus auctor accumsan diam a tincidunt. Mauris
+          imperdiet molestie diam condimentum aliquet. Pellentesque lectus sem.
+        </p>
+        <div class="author"> <span class="name">Jonathan Doe</span><br/><span class="profecy">Founder / Character Design</span></div>
+      </div>
+    </li>
+    <li class="slide">
+      <div class="slide-photo-box"><img class="slide-photo" src="https://goo.gl/oE2wQU"/></div>
+      <div class="slide-text"><i class="quote-character fa fa-quote-left" aria-hidden="true"></i>
+        <p class="article">Mauris pharetra sit amet nibh a maximus. Aliquam bibendum lectus quis risus sollicitudin consequat. Nullam eget urna id nibh finibus pulvinar sed a massa. Nullam sodales porttitor magna, non ullamcorper diam placerat a. Phasellus ut metus vulputate, tincidunt magna in, commodo tortor.</p>
+        <div class="author"> <span class="name">Jonathan Doe</span><br/><span class="profecy">Founder / Character Design</span></div>
+      </div>
+    </li>
+    <li class="slide">
+      <div class="slide-photo-box"><img class="slide-photo" src="https://goo.gl/okQVNB"/></div>
+      <div class="slide-text"><i class="quote-character fa fa-quote-left" aria-hidden="true"></i>
+        <p class="article">Quisque tempus nulla ligula, in ultricies enim porta ut. Ut molestie lorem massa, blandit dictum nulla molestie a. Praesent a lobortis lacus, vitae scelerisque nisl. Maecenas scelerisque ante nec sapien fringilla, ut lobortis mauris accumsan. In bibendum nibh ut laoreet eleifend.</p>
+        <div class="author"> <span class="name">Jonathan Doe</span><br/><span class="profecy">Founder / Character Design</span></div>
+      </div>
+    </li>
+    <li class="slide">
+      <div class="slide-photo-box"><img class="slide-photo" src="https://goo.gl/oE2wQU"/></div>
+      <div class="slide-text"><i class="quote-character fa fa-quote-left" aria-hidden="true"></i>
+        <p class="article">Mauris pharetra sit amet nibh a maximus. Aliquam bibendum lectus quis risus sollicitudin consequat. Nullam eget urna id nibh finibus pulvinar sed a massa. Nullam sodales porttitor magna, non ullamcorper diam placerat a. Phasellus ut metus vulputate, tincidunt magna in, commodo tortor.</p>
+        <div class="author"> <span class="name">Jonathan Doe</span><br/><span class="profecy">Founder / Character Design</span></div>
+      </div>
+    </li>
+    
+  </ul>
+  <div class="dots"><span class="dot activedot" onclick="getSlide(0)"></span><span class="dot" onclick="getSlide(1)"></span><span class="dot" onclick="getSlide(2)"></span><span class="dot" onclick="getSlide(3)"></span></div>
 </div> -->
-
-
-
 
 
 <!-- Wrapper -->
