--- a/app/assets/stylesheets/shared.css.scss
+++ b/app/assets/stylesheets/shared.css.scss
@@ -1,5 +1,102 @@
 
+.author {
+  text-align: center;
+}
 
+.name, .profecy {
+  display: block;
+  margin: 0;
+}
+
+.quote-character {
+  font-size: 3rem;
+  opacity: 0.3;
+}
+
+.slide {
+  display: none;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 100%;
+  background-color: #ddd;
+  padding: 1rem 3rem;
+}
+@media screen and (max-width: 800px) {
+  .slide {
+    padding: 1rem;
+  }
+}
+.slide .visible {
+  display: flex;
+}
+
+.slide-photo-box {
+  width: 20%;
+  min-width: 150px;
+}
+
+.slide-photo {
+  width: 122px;
+  height: 122px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 50% 10%;
+     object-position: 50% 10%;
+}
+
+.slide-text {
+  width: 70%;
+  height: 100%;
+}
+
+.slider {
+  padding: 0;
+}
+
+.dots {
+  text-align: center;
+}
+
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 5px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.1s ease;
+}
+
+.activedot, .dot:hover {
+  background-color: #717171;
+}
+
+.active {
+  display: flex;
+}
+
+.slider {
+  margin: 0 0 1rem;
+  width: 100%;
+  height: 15em;
+}
+
+.slider-container {
+  padding: 2rem;
+  width: 100%;
+}
+@media screen and (max-width: 800px) {
+  .slider-container {
+    padding: 0;
+  }
+  .slider {
+    height: 100%;
+  }
+}
 
 
 
