--- a/app/views/dealzons/index.html.erb
+++ b/app/views/dealzons/index.html.erb
@@ -8,43 +8,67 @@
 
 <!-- <div class="slider-container">
   <ul class="slider">
-    <li class="slide active">
-      <div class="slide-photo-box"><img class="slide-photo" src="https://goo.gl/5iaCS2"/></div>
-      <div class="slide-text"><i class="quote-character fa fa-quote-left" aria-hidden="true"></i>
+    <li class="slide index_active">
+      <div class="slide-photo-box">
+       <img src="https://i-h2.pinimg.com/564x/95/5a/8b/955a8b7610de23eb0ea48b5e839be18b.jpg"/>
+      </div>
+      <div class="slide-text">
+        <h1>Offer Title</h1>
         <p class="article">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sed dolor at
           magna tempus facilisis. Vivamus auctor accumsan diam a tincidunt. Mauris
           imperdiet molestie diam condimentum aliquet. Pellentesque lectus sem.
         </p>
-        <div class="author"> <span class="name">Jonathan Doe</span><br/><span class="profecy">Founder / Character Design</span></div>
+        <button>button</button>
       </div>
     </li>
     <li class="slide">
-      <div class="slide-photo-box"><img class="slide-photo" src="https://goo.gl/oE2wQU"/></div>
-      <div class="slide-text"><i class="quote-character fa fa-quote-left" aria-hidden="true"></i>
-        <p class="article">Mauris pharetra sit amet nibh a maximus. Aliquam bibendum lectus quis risus sollicitudin consequat. Nullam eget urna id nibh finibus pulvinar sed a massa. Nullam sodales porttitor magna, non ullamcorper diam placerat a. Phasellus ut metus vulputate, tincidunt magna in, commodo tortor.</p>
-        <div class="author"> <span class="name">Jonathan Doe</span><br/><span class="profecy">Founder / Character Design</span></div>
+      <div class="slide-photo-box">
+       <img src="https://i-h2.pinimg.com/564x/62/15/4c/62154c9629abd7ccd4f6e07d006afa75.jpg"/>
+      </div>
+      <div class="slide-text">
+        <h1>Offer Title</h1>
+        <p class="article">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sed dolor at
+          magna tempus facilisis. Vivamus auctor accumsan diam a tincidunt. Mauris
+          imperdiet molestie diam condimentum aliquet. Pellentesque lectus sem.
+        </p>
+        <button>button</button>
       </div>
     </li>
     <li class="slide">
-      <div class="slide-photo-box"><img class="slide-photo" src="https://goo.gl/okQVNB"/></div>
-      <div class="slide-text"><i class="quote-character fa fa-quote-left" aria-hidden="true"></i>
-        <p class="article">Quisque tempus nulla ligula, in ultricies enim porta ut. Ut molestie lorem massa, blandit dictum nulla molestie a. Praesent a lobortis lacus, vitae scelerisque nisl. Maecenas scelerisque ante nec sapien fringilla, ut lobortis mauris accumsan. In bibendum nibh ut laoreet eleifend.</p>
-        <div class="author"> <span class="name">Jonathan Doe</span><br/><span class="profecy">Founder / Character Design</span></div>
+      <div class="slide-photo-box">
+       <img src="https://i-h2.pinimg.com/564x/95/5a/8b/955a8b7610de23eb0ea48b5e839be18b.jpg"/>
+      </div>
+      <div class="slide-text">
+        <h1>Offer Title</h1>
+        <p class="article">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sed dolor at
+          magna tempus facilisis. Vivamus auctor accumsan diam a tincidunt. Mauris
+          imperdiet molestie diam condimentum aliquet. Pellentesque lectus sem.
+        </p>
+        <button>button</button>
       </div>
     </li>
     <li class="slide">
-      <div class="slide-photo-box"><img class="slide-photo" src="https://goo.gl/oE2wQU"/></div>
-      <div class="slide-text"><i class="quote-character fa fa-quote-left" aria-hidden="true"></i>
-        <p class="article">Mauris pharetra sit amet nibh a maximus. Aliquam bibendum lectus quis risus sollicitudin consequat. Nullam eget urna id nibh finibus pulvinar sed a massa. Nullam sodales porttitor magna, non ullamcorper diam placerat a. Phasellus ut metus vulputate, tincidunt magna in, commodo tortor.</p>
-        <div class="author"> <span class="name">Jonathan Doe</span><br/><span class="profecy">Founder / Character Design</span></div>
+      <div class="slide-photo-box">
+       <img src="https://i-h2.pinimg.com/564x/95/5a/8b/955a8b7610de23eb0ea48b5e839be18b.jpg"/>
+      </div>
+      <div class="slide-text">
+        <h1>Offer Title</h1>
+        <p class="article">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sed dolor at
+          magna tempus facilisis. Vivamus auctor accumsan diam a tincidunt. Mauris
+          imperdiet molestie diam condimentum aliquet. Pellentesque lectus sem.
+        </p>
+        <button>button</button>
       </div>
     </li>
     
   </ul>
   <div class="dots"><span class="dot activedot" onclick="getSlide(0)"></span><span class="dot" onclick="getSlide(1)"></span><span class="dot" onclick="getSlide(2)"></span><span class="dot" onclick="getSlide(3)"></span></div>
-</div> -->
-
+</div>
+ -->
 
 <!-- Wrapper -->
 <div class="wrapper">
@@ -118,9 +142,14 @@
                  <li>$<%= deal.am_price_is %></li>
                  <li>$<%= deal.am_price_was %></li>
                 <% end %>
-
+     
                 <% if deal.acategory_id == 3 %>
-                 <li class="price_hidden">hidden</li>                
+                 <% if deal.am_price_is.present? %>
+                  <li>$<%= deal.am_price_is %></li>
+                  <li>$<%= deal.am_price_was %></li>
+                 <% else %>
+                  <li class="price_hidden">hidden</li>
+                 <% end %>
                 <% end %> 
 
                 <% if deal.acategory_id == 4 %>   
