--- a/app/assets/stylesheets/shared.css.scss
+++ b/app/assets/stylesheets/shared.css.scss
@@ -140,6 +140,10 @@ ul.social-icons {
   margin-right: -7.5em;
 }
 
+.sns_sharing {
+  text-align: center;
+}
+
 
 /* ---------------------------------------------
    On Old verson's webpage
