--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,8 @@
     gtag('config', 'UA-113637704-1');
   </script>
 
+  <script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=5bcaf6e3e0bd05001110552d&product=inline-share-buttons"></script>
+
 </head>
 
 <body class="is-preload">
