--- a/app/views/dealzons/_navbar.html.erb
+++ b/app/views/dealzons/_navbar.html.erb
@@ -23,7 +23,7 @@
       <a href="#" class="icon fa-angle-down">Deals</a>
       <ul>
        <li>
-          <a>Amazon</a>
+          <a href="/dealzons">Amazon</a>
           <ul>
             <li><%=link_to "What's New", dealzons_path %></li>
             <% Acategory.all.each do |acategory| %>
@@ -31,8 +31,6 @@
             <% end %>            
           </ul>
          </li>
-         <!-- <li><%= link_to "eBay", events_path %></li> -->
-
       </ul>
     </li>
      
