--- a/app/views/dealzons/index.html.erb
+++ b/app/views/dealzons/index.html.erb
@@ -6,23 +6,22 @@
  <h1>All about the Amazon Shopping</h1>
 </div>
 
-<!-- <div class="slider-container">
+<div class="slider-container">
   <ul class="slider">
     <li class="slide index_active">
       <div class="slide-photo-box">
-       <img src="https://i-h2.pinimg.com/564x/95/5a/8b/955a8b7610de23eb0ea48b5e839be18b.jpg"/>
+       <img src="https://i-h2.pinimg.com/564x/39/fa/ac/39faac7bfd546cea05274125fc7fb8a6.jpg"/>
       </div>
       <div class="slide-text">
-        <h1>Offer Title</h1>
+        <h1>Amazon Deals & Promotions 2018</h1>
         <p class="article">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sed dolor at
-          magna tempus facilisis. Vivamus auctor accumsan diam a tincidunt. Mauris
-          imperdiet molestie diam condimentum aliquet. Pellentesque lectus sem.
+          Browse the Amazon deals of the day to save as much as 70% on electronics and more.<br/>
+          You can purchase items featured in different Today's Deals sections on the same day
         </p>
-        <button>button</button>
+        <a class="button" target="_blank" href="https://amzn.to/2yTVECK">Check it Out</a>
       </div>
     </li>
-    <li class="slide">
+   <!--  <li class="slide">
       <div class="slide-photo-box">
        <img src="https://i-h2.pinimg.com/564x/62/15/4c/62154c9629abd7ccd4f6e07d006afa75.jpg"/>
       </div>
@@ -65,10 +64,15 @@
       </div>
     </li>
     
-  </ul>
-  <div class="dots"><span class="dot activedot" onclick="getSlide(0)"></span><span class="dot" onclick="getSlide(1)"></span><span class="dot" onclick="getSlide(2)"></span><span class="dot" onclick="getSlide(3)"></span></div>
+  </ul> -->
+  <div class="dots">
+   <span class="dot activedot" onclick="getSlide(0)"></span>
+<!--    <span class="dot" onclick="getSlide(1)"></span>
+   <span class="dot" onclick="getSlide(2)"></span>
+   <span class="dot" onclick="getSlide(3)"></span> -->
+  </div>
 </div>
- -->
+
 
 <!-- Wrapper -->
 <div class="wrapper">
