--- a/app/views/dealzons/_dealzon.js.erb
+++ b/app/views/dealzons/_dealzon.js.erb
@@ -13,7 +13,7 @@
 </script>
 
 <script>
-var slideIndex = 0, timeout = 99999999000;
+var slideIndex = 0, timeout = 10000;
 var slides = document.getElementsByClassName("slide");
 var dots = document.getElementsByClassName("dot");
 function getSlide(index) {
