--- a/app/views/dealzons/index.html.erb
+++ b/app/views/dealzons/index.html.erb
@@ -18,7 +18,7 @@
           Browse the Amazon deals of the day to save as much as 70% on electronics and more.<br/>
           You can purchase items featured in different Today's Deals sections on the same day
         </p>
-        <a class="button" target="_blank" href="https://amzn.to/2yTVECK">Check it Out</a>
+        <a class="button large" target="_blank" href="https://amzn.to/2yTVECK">Check it Out</a>
       </div>
     </li>
    <!--  <li class="slide">
