--- a/app/views/dealzons/show.html.erb
+++ b/app/views/dealzons/show.html.erb
@@ -58,6 +58,7 @@
 
               <% if @dealzon.acategory_id == 4 %>   
                <li class="show_price_is">$<%= @dealzon.am_price_is %></span></li>  
+               <span class="sale_more"> - <%= @dealzon.am_price_sale %>% off</span>
                <% if @dealzon.am_shipping.present? %>
                 <div class="somthing_hidden"><%= @dealzon.am_shipping %></div>
                 <li class="freeshipping">+ free shipping</li>
@@ -90,12 +91,12 @@
            <% if @dealzon.acategory_id == 4 %>
             <div class="promo_code">
               <p class="end_code">PROMO CODE : <%= @dealzon.am_code %></p>
-              <p class="end_date">This code has expired.</p>                
+              <p class="end_date">Sorry, this code has expired.</p>                
             </div>
            <% end %>
            <% if @dealzon.acategory_id == 3 %>
             <div class="promo_code">
-             <p class="end_date">This promotion has expired.</p>
+             <p class="end_date">Sorry, this promotion has expired.</p>
             </div>
            <% end %>
           <% else %>
@@ -145,6 +146,8 @@
           <div class="ckeditor">
            <%= raw @dealzon.am_spare_21 %><br/>
           </div>
+
+          
             
           <% if @dealzon.acategory_id == 4 %>
             <div class="code_step">
