--- a/app/views/posts/_banner.html.erb
+++ b/app/views/posts/_banner.html.erb
@@ -9,5 +9,16 @@
       </ul>
     </div>
   </article>
+
+<!--   <article data-position="bottom right">
+  <div class="inner">
+      <img src="https://images.unsplash.com/photo-1512446387219-99c19f8fe95f?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=68d56705b92c9ff7b1c26ea7f62b3442&auto=format&fit=crop&w=500&q=60" alt="Deals of the Day of Amazon">
+      <h2>Deals of the Day</h2>
+      <p>Up To 80% Off Amazon everyday new deals</p>
+      <ul class="actions">
+        <li><a target="_blank" class="button large" href="https://amzn.to/2COwKbd">Learn More</a></li>
+      </ul>
+    </div>
+  </article> -->
   
 </section>
