--- a/app/views/dealzons/index.html.erb
+++ b/app/views/dealzons/index.html.erb
@@ -8,9 +8,23 @@
 
 <div class="slider-container">
   <ul class="slider">
-    <li class="slide index_active">
+
+    <li class="slide  index_active">
       <div class="slide-photo-box">
-       <img src="https://i-h2.pinimg.com/564x/39/fa/ac/39faac7bfd546cea05274125fc7fb8a6.jpg"/>
+       <img src="https://i-h2.pinimg.com/564x/f9/ae/3f/f9ae3f15cf0fc89edf50063b1562de61.jpg" alt="black friday on amazon">
+      </div>
+      <div class="slide-text">
+        <h1>Early Black Friday Deals Are Just Getting Started!</h1>
+        <p class="article">
+          Shop online for the best 2018 Early Black Friday deals and sales on Amazon.com. Early Black Friday specials, exclusive offers, and coupons start November 1, 2018. Shop Early Black Friday Deals Week, two days of Black Friday 2018, Black Friday deals in every department, Black Friday sales, low prices, deals, sales, holiday deals, holiday, sales, Amazon.com Black Friday deals and sales 
+        </p>
+        <a class="button large" target="_blank" href="https://amzn.to/2yTVECK">Learn More</a>
+      </div>
+    </li>
+
+    <li class="slide">
+      <div class="slide-photo-box">
+       <img src="https://i-h2.pinimg.com/564x/39/fa/ac/39faac7bfd546cea05274125fc7fb8a6.jpg" alt="deals&promotions">
       </div>
       <div class="slide-text">
         <h1>Amazon Deals & Promotions 2018</h1>
@@ -18,7 +32,7 @@
           Browse the Amazon deals of the day to save as much as 70% on electronics and more.<br/>
           You can purchase items featured in different Today's Deals sections on the same day
         </p>
-        <a class="button large" target="_blank" href="https://amzn.to/2yTVECK">Check it Out</a>
+        <a class="button large" target="_blank" href="https://amzn.to/2T2tMVA">Learn More</a>
       </div>
     </li>
    <!--  <li class="slide">
@@ -67,8 +81,8 @@
   </ul> -->
   <div class="dots">
    <span class="dot activedot" onclick="getSlide(0)"></span>
-<!--    <span class="dot" onclick="getSlide(1)"></span>
-   <span class="dot" onclick="getSlide(2)"></span>
+   <span class="dot" onclick="getSlide(1)"></span>
+   <!-- <span class="dot" onclick="getSlide(2)"></span>
    <span class="dot" onclick="getSlide(3)"></span> -->
   </div>
 </div>
