--- a/app/views/blogs/_sidebar_index.html.erb
+++ b/app/views/blogs/_sidebar_index.html.erb
@@ -89,7 +89,7 @@
    </ul>
   </section>
 
-   <section>
+  <!--  <section>
      <h3>POPULAR DEALS ON EBAY</h3>
      <div id="sidebar">
       <ul id="side-rcnt-thumb-post-list">
@@ -110,7 +110,7 @@
     <ul class="actions">
       <li><a href="/events" class="button">Learn More</a></li>
     </ul>
-   </section>
+   </section> -->
 
 
 </aside>
