--- a/app/views/bridges/_main.html.erb
+++ b/app/views/bridges/_main.html.erb
@@ -17,7 +17,7 @@
     </div>
 
     <div class="gallery-item">
-      <a target="_blank" href="Store_URL"><img class="gallery-image" src="https://d3iqwsql9z4qvn.cloudfront.net/wp-content/uploads/2017/05/18203729/Amazon-Logo-PNG.png" alt="Amazon"></a>
+      <a target="_blank" href="https://amzn.to/2QljOjP"><img class="gallery-image" src="https://d3iqwsql9z4qvn.cloudfront.net/wp-content/uploads/2017/05/18203729/Amazon-Logo-PNG.png" alt="Amazon"></a>
     </div>
 
     <div class="gallery-item">
@@ -33,7 +33,7 @@
     </div>
 
     <div class="gallery-item">
-      <a target="_blank" href="Store_URL"><img class="gallery-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/60/Kohl%27s_logo.svg/2000px-Kohl%27s_logo.svg.png" alt="Kohl's"></a>
+      <a target="_blank" href="https://redirect.viglink.com?key=9f8b8215c45eaf9e20303d2bf9cb410c&u=https%3A%2F%2Fwww.kohls.com%2Fsale-event%2Fblack-friday-deals.jsp%3FsearchTerm%3Dblack%2520friday%26submit-search%3Dweb-regular&opt=1"><img class="gallery-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/60/Kohl%27s_logo.svg/2000px-Kohl%27s_logo.svg.png" alt="Kohl's"></a>
     </div>
 
     <div class="gallery-item">
