--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,98 +1,41 @@
-<header id="header">
-  <%= render 'events/navbar' %> 
-</header>
 
-<div class="index_header">
- <h1>All about the eBay Shopping</h1>
-</div>
+  <div class="isotope_main">
+    
+    <%= render 'events/side' %>
 
-<!-- Wrapper -->
-<div class="wrapper">
-
-  <!-- Main -->
-    <section class="main">
-
-      <div class="dealzon_nav">
-        <a href="#" class="menu-trigger">Category</a>
-        <ul>
-          <li><%= link_to "All Offer", events_path %></li>
-          <% Ecategory.all.each do |ecategory| %>
-            <li><%= link_to ecategory.name, events_path(ecategory: ecategory.name) %></li>
-          <% end %>
-          <% if can? :update, @event %>
-           <li><%= link_to "Add New Inspiration", new_event_path %></li>
-          <% end %>
-        </ul>
+    <section id="items">
+      <div class="filter-info">
+        <div id="filter-display-container">
+          <p id="category-filter-display"></p>
+          <p id="color-filter-display"></p>
+        </div>
+        <div id="filter-count-container">
+          <p id="initial-filter-count"></p>
+          <p id="updated-filter-count"></p>
+        </div>
       </div>
-
-      <div class="index_container">
-        <div class="grid">
-
-         <% @events.each do |event| %>
-          <div class="card">
-            <div class="card--image">
-              <%= link_to (image_tag event.eb_image), event %>
-            </div>
-            <div class="card--content">
-
-             <div class="index_category">
-              <% if event.ecategory_id == 1 %> 
-               <div class="card--category category_red"><%= event.ecategory.name if event.ecategory %></div>
-              <% end %>
-              <% if event.ecategory_id == 2 %> 
-               <div class="card--category category_green"><%= event.ecategory.name if event.ecategory %></div>
-               <div class="category_sale">you can save <span class="deal_index"><%= event.eb_price_sale %>%off</span></div>
-              <% end %>
-              <% if event.ecategory_id == 3 %> 
-               <div class="card--category category_blue"><%= event.ecategory.name if event.ecategory %></div>
-               <div class="category_sale">you can save <span class="code_index"><%= event.eb_price_sale %>%off more</span></div>
-              <% end %>
-              <% if event.ecategory_id == 4 %> 
-               <div class="card--category category_purple"><%= event.ecategory.name if event.ecategory %></div>
-              <% end %>
-             </div>
-             
-             <p><%= event.eb_title %></p>
-             <% if event.ecategory_id == 1 %>
-               <ul>
-                <li><%= event.eb_featured_sale %></li>
-               </ul>
-             <% else %>
-              <% if event.ecategory_id == 3 %>
-               <ul>
-                <li>+ <%= event.eb_price_sale %>% off more</li>
-               </ul>
-              <% else %>
-               <ul>
-                <li>$<%= event.eb_price_is %></li>
-                <li>$<%= event.eb_price_was %></li>
-               </ul>
-              <% end %>
-             <% end %>
-             <div class="index_button">
-               <a class="button fit" href="events/<%= event.id %>">See More Detail</a>
-             </div>  
-            </div> 
-          </div>
-         <% end %>
-
-        </div><br/>
-        <%= paginate @events %>
+      <div id="no-items-container">
+        <p id="no-items-text">No items matched this filter. Please try another.</p>
       </div>
-
-
+      
+      
+    <%= render 'events/content' %>
     </section>
-
-  <!-- Sidebar -->
-  <%= render "events/sidebar_index" %>
-
-</div>
-
-<!-- Footer -->
-<%= render "shared/footer" %>
-<!-- Javascript -->
-<%= render "event.js" %>
-
-
-
-
+    
+  </div>
+  
+  <!--<footer>-->
+  <!--  <i id="back-to-top-btn" class="fas fa-angle-up" aria-hidden="true"></i>-->
+    
+  <!--  <p>Help</p>-->
+  <!--  <p>Terms</p>-->
+  <!--  <p>Sign Up</p>-->
+  <!--  <a id="logo" href="/">-->
+  <!--    <img src="https://s20.postimg.cc/8rsxvbezx/logo.png" alt="logo">-->
+  <!--  </a>-->
+  <!--  <p class="active">Shop</p>-->
+  <!--  <p>About</p>-->
+  <!--  <p>Contact</p>-->
+    
+  <!--  <i id="cart" class="fas fa-shopping-bag"></i>-->
+  <!--</footer>-->
