--- a/app/views/posts/_navbar.html.erb
+++ b/app/views/posts/_navbar.html.erb
@@ -26,6 +26,8 @@
       </ul>
     </li>
 
+    <li><%= link_to "Black Friday 2018", blackfriday_path %></li>
+
     <li><%= link_to "Blog", blogs_path %></li>
 
     <% if can? :update, @post %>
