--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -225,6 +225,7 @@
   transition: all .2s ease-in-out;
 }
 
+/* 
 footer {
   padding: 30px;
   position: fixed;
@@ -283,6 +284,7 @@ footer #cart {
   border: 1px solid #777777;
   border-radius: 20px;
 }
+*/
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
   
