--- a/app/views/dealzons/_navbar.html.erb
+++ b/app/views/dealzons/_navbar.html.erb
@@ -34,7 +34,7 @@
       </ul>
     </li>
      
-    <li><%= link_to "Black Friday 2018", blackfriday_path %></li>
+    <!-- <li><%= link_to "Black Friday 2018", blackfriday_path %></li> -->
     <li><%= link_to "Blog", blogs_path %></li>
 
     <% if can? :update, @post %>
