--- a/app/views/posts/_navbar.html.erb
+++ b/app/views/posts/_navbar.html.erb
@@ -26,7 +26,7 @@
       </ul>
     </li>
 
-    <li><%= link_to "Black Friday 2018", blackfriday_path %></li>
+    <!-- <li><%= link_to "Black Friday 2018", blackfriday_path %></li> -->
 
     <li><%= link_to "Blog", blogs_path %></li>
 
