--- a/app/assets/stylesheets/dealzons.scss
+++ b/app/assets/stylesheets/dealzons.scss
@@ -194,4 +194,18 @@
 .sale_more {
   text-decoration: none;
 }
+.category_color_01 {
+  color: #ff3333;
+}
+.category_color_02 {
+  color: #00cd00;
+}
+.category_color_03 {
+  color: #cd00cd;
+}
+.category_color_04 {
+  color: #08f;
+}
+
+
 
