--- a/app/views/dealzons/_sidebar_index.html.erb
+++ b/app/views/dealzons/_sidebar_index.html.erb
@@ -146,7 +146,7 @@
             <!-- <h3><a href="#"><%= blog.blog_title %></a></h3> -->
             <h3><%= link_to blog.blog_title, blog %></h3>
           </header>
-          <p><%= blog.blog_intro %></p>
+          <p class="blog_content"><%= blog.blog_intro %></p>
           <ul class="actions">
             <li><a href="/blogs/<%= blog.id %>" class="button">Continue Reading</a></li>
           </ul>
