--- a/app/assets/stylesheets/shared.css.scss
+++ b/app/assets/stylesheets/shared.css.scss
@@ -31,6 +31,9 @@
   height: 100%;
   margin-top: 1em;
 }
+.slide-text img {
+  width: 100%;
+}
 .slider {
   padding: 0;
 }
@@ -808,6 +811,11 @@ ul.accordian li {
 .BF_container .BF_banner img {
   width: 100%;
 }
+
+
+
+
+
 
 
 
