--- a/app/views/dealzons/index.html.erb
+++ b/app/views/dealzons/index.html.erb
@@ -22,6 +22,23 @@
         <a class="button large" target="_blank" href="https://amzn.to/2T2tMVA">Learn More</a>
       </div>
     </li>
+
+    
+    <li class="slide ">
+      <div class="slide-photo-box">
+       <img src="https://i-h2.pinimg.com/564x/7e/73/ea/7e73ea498e66abc279b223d5b36d2a3c.jpg">
+      </div>
+      <div class="slide-text">
+        <h1>Shop 12 Days of Deals</h1>
+        <p class="article">
+          Welcome to 12 Days of Deals at Amazon.com! Starting in December, find great deals on gifts for film buffs, tv fans, photographers, home chefs, sporty kids, gamers, DIYers, and bookworms.
+        </p>
+
+        <a class="button large" target="_blank" href="https://amzn.to/2Ry1ykn">Learn More</a>
+      </div>
+    </li>
+
+    
    <!--  <li class="slide">
       <div class="slide-photo-box">
        <img src="https://i-h2.pinimg.com/564x/62/15/4c/62154c9629abd7ccd4f6e07d006afa75.jpg"/>
@@ -36,6 +53,7 @@
         <button>button</button>
       </div>
     </li>
+
     <li class="slide">
       <div class="slide-photo-box">
        <img src="https://i-h2.pinimg.com/564x/95/5a/8b/955a8b7610de23eb0ea48b5e839be18b.jpg"/>
