--- a/app/views/dealzons/index.html.erb
+++ b/app/views/dealzons/index.html.erb
@@ -22,22 +22,6 @@
         <a class="button large" target="_blank" href="https://amzn.to/2T2tMVA">Learn More</a>
       </div>
     </li>
-
-    
-    <li class="slide ">
-      <div class="slide-photo-box">
-       <img src="https://i-h2.pinimg.com/564x/7e/73/ea/7e73ea498e66abc279b223d5b36d2a3c.jpg">
-      </div>
-      <div class="slide-text">
-        <h1>Shop 12 Days of Deals</h1>
-        <p class="article">
-          Welcome to 12 Days of Deals at Amazon.com! Starting in December, find great deals on gifts for film buffs, tv fans, photographers, home chefs, sporty kids, gamers, DIYers, and bookworms.
-        </p>
-
-        <a class="button large" target="_blank" href="https://amzn.to/2Ry1ykn">Learn More</a>
-      </div>
-    </li>
-
     
    <!--  <li class="slide">
       <div class="slide-photo-box">
@@ -86,7 +70,7 @@
   </ul> -->
   <div class="dots">
    <span class="dot activedot" onclick="getSlide(0)"></span>
-   <span class="dot" onclick="getSlide(1)"></span>
+   <!-- <span class="dot" onclick="getSlide(1)"></span> -->
    <!-- <span class="dot" onclick="getSlide(2)"></span>
    <span class="dot" onclick="getSlide(3)"></span> -->
   </div>
