--- a/app/assets/stylesheets/shared.css.scss
+++ b/app/assets/stylesheets/shared.css.scss
@@ -157,7 +157,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   padding: 0.5em;
 }
 .card--content {
@@ -214,7 +214,7 @@
     position: absolute;
     width: 100%;
     /* height: 17em; */
-    object-fit: cover;
+    object-fit: contain;
 
   }
 }
@@ -282,7 +282,7 @@ list-style: none;
      margin-top: 2em;
    }
    .card--image img {
-     object-fit: cover;
+     object-fit: contain;
    }
  }
 
